--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.ts",
   "scripts": {
+    "sonar": "sonar-scanner",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node src/server.ts",
     "dev": "nodemon src/server.ts",
@@ -24,6 +25,7 @@
     "nodemailer": "^6.10.1",
     "nodemon": "^3.1.9",
     "redis": "^4.7.0",
+    "sonarqube-scanner": "^4.3.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "winston": "^3.17.0",
