--- a/src/docs/superadmin.yaml
+++ b/src/docs/superadmin.yaml
@@ -227,3 +227,96 @@ paths:
                   message:
                     type: string
                     example: Unauthorized
+  /api/superadmin/auth/signup:
+    post:
+      summary: Super Admin Signup
+      tags:
+        - Superadmin
+      operationId: signupSuperAdmin
+      description: Registers a new super admin (no authentication required)
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  example: Alice Smith
+                email:
+                  type: string
+                  example: superadmin@example.com
+                password:
+                  type: string
+                  example: SuperSecure123
+              required:
+                - name
+                - email
+                - password
+      responses:
+        '201':
+          description: Super Admin registered successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  token:
+                    type: string
+                    example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+        '400':
+          description: Signup failed
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Email already exists
+
+  /api/superadmin/auth/login:
+    post:
+      summary: Super Admin Login
+      tags:
+        - Superadmin
+      operationId: loginSuperAdmin
+      description: Authenticates a super admin and returns a JWT token
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                  example: superadmin@example.com
+                password:
+                  type: string
+                  example: SuperSecure123
+              required:
+                - email
+                - password
+      responses:
+        '200':
+          description: Login successful
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  token:
+                    type: string
+                    example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+        '401':
+          description: Invalid credentials
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Invalid credentials
